--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -217,19 +217,19 @@ hr {
 /*** Package End ***/
 
 /*** Facilities Start ***/
-.service-item {
+.facilities-item {
     box-shadow: 0 0 45px rgba(0, 0, 0, 0.228);
 }
 
-.service-item:hover {
+.facilities-item:hover {
     background: var(--primary);
 }
 
-.service-item:hover * {
+.facilities-item:hover * {
     color: var(--light) !important;
 }
 
-#service .card {
+#facilities .card {
     flex-direction: row !important;
 }
 
