--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -298,6 +298,7 @@ hr {
 
 .custom-scrollbar::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
